# 2026-csust-dog

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  stm32cubeide-export.json
Core/Inc/: tim.h
Core/Src/: main.c  main_stair_platform_test.c  main_track_blue_boost_test.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
User/: bus_servo.c  bus_servo.h  dog_gait.c  dog_gait.h  dog_servo.c  dog_servo.h  dog_servo_config.c  dog_servo_config.h  dog_task.c  dog_task.h  image_command.c  image_command.h  stair_platform_test_program.c  stair_platform_test_program.h  throw_servo.c  throw_servo.h  track_blue_boost_test_program.c  track_blue_boost_test_program.h
cmake/: vscode_generated.cmake
docs/superpowers/plans/: 2026-06-17-track-blue-boost-test.md
information/: README.md  README_DogRobot_BusServo_Status.md  daplink 使用说明.md
information/04 STM32版本开发-舵机控制器/02 源码程序/案例1 控制单个舵机转动/PROJECT/: LSC.uvgui_Administrator.bak  LSC.uvguix.L
information/04 STM32版本开发-舵机控制器/02 源码程序/案例1 控制单个舵机转动/PROJECT/LST/: LSC.map
information/04 STM32版本开发-舵机控制器/02 源码程序/案例1 控制单个舵机转动/PROJECT/OPT/: LSC.axf  LSC.build_log.htm  LSC.hex  LSC.htm  LSC_Target 1.dep  core_cm3.d  delay.d  main.crf  misc.d  stm32f10x_bkp.crf  stm32f10x_dac.d  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_exti.d  stm32f10x_fsmc.d  stm32f10x_i2c.d  stm32f10x_iwdg.d  stm32f10x_pwr.d  stm32f10x_rcc.d  uart.d
information/04 STM32版本开发-舵机控制器/02 源码程序/案例1 控制单个舵机转动/USER/: main.c
information/04 STM32版本开发-舵机控制器/02 源码程序/案例2 控制单个舵机速度/PROJECT/: LSC.uvguix.L  LSC.uvopt  LSC.uvprojx
information/04 STM32版本开发-舵机控制器/02 源码程序/案例2 控制单个舵机速度/PROJECT/LST/: LSC.map  startup_stm32f10x_hd.lst
information/04 STM32版本开发-舵机控制器/02 源码程序/案例2 控制单个舵机速度/PROJECT/OPT/: LSC.axf  LSC.build_log.htm  LSC.hex  LSC.htm  LSC_Target 1.dep  lobotservocontroller.crf  main.crf  stm32f10x_adc.crf  stm32f10x_bkp.d  stm32f10x_cec.d  stm32f10x_crc.d  stm32f10x_dac.crf  stm32f10x_dma.d  stm32f10x_fsmc.crf  stm32f10x_gpio.crf  stm32f10x_iwdg.crf  stm32f10x_spi.crf  (+2 more)
information/04 STM32版本开发-舵机控制器/02 源码程序/案例2 控制单个舵机速度/USER/: main.c
information/04 STM32版本开发-舵机控制器/02 源码程序/案例3 控制多个舵机转动/PROJECT/: LSC.uvguix.L  LSC.uvoptx
information/04 STM32版本开发-舵机控制器/02 源码程序/案例3 控制多个舵机转动/USER/: main.c
information/04 STM32版本开发-舵机控制器/02 源码程序/案例4 舵机中位及偏差调节/PROJECT/: LSC.uvgui.Administrator  LSC.uvguix.L  LSC.uvproj.saved_uv4  LSC_Target 1.dep
information/04 STM32版本开发-舵机控制器/02 源码程序/案例4 舵机中位及偏差调节/USER/: main.c
information/STM32 开发 - 舵机/程序文件/案例1 获取总线舵机信息/: RosRobotControllerM4_serial_servo_read.hex
information/STM32 开发 - 舵机/程序文件/案例2 总线舵机ID设置/: RosRobotControllerM4_serial_servo_change_id.hex
information/STM32 开发 - 舵机/程序文件/案例3 控制总线舵机转动/: RosRobotControllerM4_serial_servo_run.hex
information/STM32 开发 - 舵机/程序文件/案例4 调节总线舵机速度/: RosRobotControllerM4_serial_servo_speed.hex
information/STM32 开发 - 舵机/程序文件/案例5 示教记录实现/: RosRobotControllerM4_serial_servo_teach.hex
tests/: check_desktop_purple_silence.py  check_event_behaviors.py  check_ordered_color_recognition.py  check_platform_track_boost.py  check_stair_platform_test_program.py  check_status_feedback.py  check_throw_servo_timing.py  check_track_blue_boost_test_program.py  check_track_hold.py  check_track_max_steer.py  check_track_right_base.py  check_track_steer_direction.py  check_track_steer_gain.py  check_uart_baud.py  check_vision_color_stop.py
vision/: main.py  main1.0(1)(1).py
vision/__pycache__/: main.cpython-313.pyc.2357853384464
(+47 files in other folders)
